--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -6,7 +7,7 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Python Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -23,3 +24,6 @@ wheels/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
+
+# Javascript
+node_modules
