--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,25 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 
-# Javascript
+## Javascript
+.DS_Store
 node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
