--- a/v2/offline_app/package.json
+++ b/v2/offline_app/package.json
@@ -7,11 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "vue": "^2.6.11"
+    "v-treeview": "^0.2.1",
+    "vue": "^2.6.11",
+    "vue-simple-accordion": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.0",
